Mon Jun 27 13:54:27 2005  Gary Maxey <gary.maxey@hp.com>

        * TAO_IDL/be/be_util.cpp
        * TAO_IDL/be_include/be_util.h
        * TAO_IDL/be/be_visitor_interface.cpp
        * TAO_IDL/be/be_visitor_interface_fwd.cpp
        * TAO_IDL/be/be_visitor_valuebox.cpp
        * TAO_IDL/be/be_visitor_valuetype.cpp
        * TAO_IDL/be/be_visitor_valuetype_fwd.cpp
        * TAO_IDL/be/be_visitor_interface/any_op_ch.cpp
        * TAO_IDL/be/be_visitor_interface/any_op_cs.cpp
        * TAO_IDL/be/be_visitor_interface_fwd/any_op_ch.cpp
        * TAO_IDL/be/be_visitor_valuebox/any_op_ch.cpp
        * TAO_IDL/be/be_visitor_valuebox/any_op_cs.cpp
        * TAO_IDL/be/be_visitor_valuetype/any_op_ch.cpp
        * TAO_IDL/be/be_visitor_valuetype/any_op_cs.cpp
        * TAO_IDL/be/be_visitor_valuetype_fwd/any_op_ch.cpp

          When generating Any insertion and extraction operators put them
          in a namespace that corresponds to their enclosing module (if
          any).  Addresses problem reported in Bugzilla report #2071.

Mon Jun 27 13:08:01 2005  Gary Maxey <gary.maxey@hp.com>

        * tao/Valuetype/ValueBase.cpp:
          Added missing copy constructor implementation

        * TAO/tao/Valuetype/StringValueC.inl
          Change to avoid warnings by some compilers

Mon Jun 27 12:19:01 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* orbsvcs/orbsvcs/FaultTolerance/FT_ClientRequest_Interceptor.cpp (TAO): Changed
	  the comment to "Using default value of 1.5 seconds".  Thanks to
 	  Simon Massey and Bala for resolving this.

Mon Jun 27 11:09:34 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Exposed_Policies/Policy_Verifier.h:
        * tests/Exposed_Policies/Policy_Verifier.cpp:
        * tests/Exposed_Policies/client.cpp:

          Modified this test to not run if the initialization failed.  This
          avoids a core dump.

        * tests/Exposed_Policies/run_test.pl:
